refactor TaskManager to return Optional from get task by id methods